syntax = "proto3";

package slack.proto.astra.schema;

option java_package = "com.slack.astra.proto.schema";

// We want to call this Schema and then remove the .schema package
// But if we do that today, the field types interfere with existing enums
// which we don't want addressing just yet ( astra_search.proto )
message IngestSchema {
  // convert to a map
  map<string, SchemaField> fields = 1;
  map<string, DefaultField> defaults = 2;
}

message DefaultField {
  SchemaField mapping = 1;
  string match_mapping_type = 2;
}

message SchemaField {
  SchemaFieldType type = 2;
  map<string, SchemaField> fields = 3;
  int32 ignore_above = 4;
}

// https://opensearch.org/docs/2.4/opensearch/supported-field-types/index/
// Add the remaining types as needed
enum SchemaFieldType {
  KEYWORD  = 0;
  TEXT  = 1;
  IP  = 2;
  // expose format in the future
  DATE = 3;
  BOOLEAN = 4;
  DOUBLE = 5;
  FLOAT = 6;
  HALF_FLOAT = 7;
  INTEGER = 8;
  LONG = 9;
  SCALED_LONG = 10;
  SHORT = 11;
  BYTE = 12;
  BINARY = 13;
  // we may get rid of this in the future
  ID = 14;
  // to help with backward compatibility
  // move to KEYWORD in the future
  STRING = 15;
};
